app/src/main/java/com/example/fail/Rain.kt
package com.example.fail

data class Rain(
    val `3h`: Double
)